force-app/main/default/objects/OnlinePaymentLineItem__c/OnlinePaymentLineItem__c.object-meta.xml
<CustomObject>
    <label>Online Payment LineItem</label>
    <nameField>
        <displayFormat>OPL-{000000000}</displayFormat>
        <label>Online Payment LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Payment LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>