force-app/main/default/objects/OnlinePaymentLineItem__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Online Payment LineItems</relationshipLabel>
    <relationshipName>Online_Payment_LineItems</relationshipName>
    <type>Lookup</type>
</CustomField>