force-app/main/default/objects/OnlinePaymentLineItem__c/fields/OnlinePayment__c.field-meta.xml
<CustomField>
    <fullName>OnlinePayment__c</fullName>
    <label>Online Payment</label>
    <referenceTo>OnlinePayment__c</referenceTo>
    <relationshipLabel>Online Payment LineItems</relationshipLabel>
    <relationshipName>Online_Payment_LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>