force-app/main/default/objects/OnlinePaymentLineItem__c/fields/PlannedAmount__c.field-meta.xml
<CustomField>
    <fullName>PlannedAmount__c</fullName>
    <label>Planned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>